# moirai

./: Dockerfile  README.md  build.sh  parse.py  pyproject.toml
moirai/: __main__.py  filter.py  moirai.py
moirai/res/: Dockerfile.template
