[tool.poetry]
name = "moirai"
version = "0.1.0"
description = ""
authors = ["novafacing <rowanbhart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rst2json = "^0.4.0"
ptpython = "^3.0.20"

[tool.poetry.dev-dependencies]
black = "^21.11b0"
isort = "^5.10.1"
recommonmark = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
